--- a/ml/cc/exercises/numpy_ultraquick_tutorial.ipynb
+++ b/ml/cc/exercises/numpy_ultraquick_tutorial.ipynb
@@ -4,7 +4,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "JuGzpxT_Z1EU"
       },
       "outputs": [],
@@ -90,9 +89,21 @@
       },
       "outputs": [],
       "source": [
-        "one_dimensional_array = np.array([1.2, 2.4, 3.5, 4.7, 6.1, 7.2, 8.3, 9.5])\n",
+        "one_dimensional_array = np.array([1.2, 3.4, 3.5, 45.7, 6.1, 7.2, 8.3, 9.5])\n",
         "print(one_dimensional_array)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array1 = np.array([3.4, 5.4, 6.3])\n",
+        "print(array1)"
+      ],
+      "metadata": {
+        "id": "b7Cvz5Q9yk-a"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -114,6 +125,32 @@
         "two_dimensional_array = np.array([[6, 5], [11, 7], [4, 8]])\n",
         "print(two_dimensional_array)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros_val = np.zeros(4)\n",
+        "ones_val = np.ones(3)\n",
+        "print(zeros_val)\n",
+        "print(ones_val)"
+      ],
+      "metadata": {
+        "id": "3vt0xcoF00g2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "two_dim = np.array([[1,3], [6,7], [10,12]])\n",
+        "print(two_dim)"
+      ],
+      "metadata": {
+        "id": "3C2PsqkZzE20"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -157,6 +194,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "squence = np.arange(0,10)\n",
+        "print(squence)"
+      ],
+      "metadata": {
+        "id": "NHUc8EOuzvAs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "aiqqxDBINAOY"
@@ -168,6 +217,18 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_inter =  np.random.randint(low = 99 , high = 200, size=(5,))\n",
+        "print(random_inter)"
+      ],
+      "metadata": {
+        "id": "Np42wrfH0aYp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -210,6 +271,18 @@
         "random_floats_between_0_and_1 = np.random.random((6,))\n",
         "print(random_floats_between_0_and_1)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "floating_rand = np.random.random((6,2))\n",
+        "print(floating_rand)"
+      ],
+      "metadata": {
+        "id": "dcfG9vOx1wY1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -286,9 +359,9 @@
       },
       "outputs": [],
       "source": [
-        "feature = ? # write your code here\n",
+        "feature = np.arange(6,21) # write your code here\n",
         "print(feature)\n",
-        "label = ?   # write your code here\n",
+        "label = (feature * 3 ) + 4 # write your code here\n",
         "print(label)"
       ]
     },
@@ -296,7 +369,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "KjtIAYvMTPGl"
       },
       "outputs": [],
@@ -329,9 +401,9 @@
       },
       "outputs": [],
       "source": [
-        "noise = ?    # write your code here\n",
+        "noise = (np.random.random([15] * 4)) - 2    # write your code here\n",
         "print(noise)\n",
-        "label = ?    # write your code here\n",
+        "label = label + noise    # write your code here\n",
         "print(label)"
       ]
     },
@@ -339,7 +411,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "7chgYKrC93np"
       },
       "outputs": [],
